[package]
name = "sec_authentication"
version = "0.1.0"
authors = ["alban_favre <fav.alban2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-authenticator="0.2.1"
read_input = "0.8"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"